What's New for PSPRadio
========================
1.18.xxxx (2007-xx-xx)
NEW FEATURES
(raf) TextUI: After a configurable amount (default 5 seconds) during playback, the visualizer goes into fullscreen.
(raf) Core: Added kiss-fft routines, and now provide frequency data to visualizer plugins if requested.
(raf) Plugins: Added a spectrum analyzer plugin (based on finespectrum.c for XMMS).
(raf) Core: FFT and VIS_Spectrum use vfpu for some calculations, to get a speedup. (Thanks to MrMr[iCE] for his helpful vfpu library pspmath).
(raf) Core: Removed VBLANK message across the core and sent to UI. UIs need to do it themselves.
(raf) TextUI3d: Updated to use a renderthread instead of vblank message -- Good speed-up.
(raf) Core/Plugins: UI Plugins have versioning now, and won't work across versions of PSPRadio that don't support the same interface.
(raf) Core: Clean-up.
(raf) CScreen: Using GU for clearing screen and background copies. This makes rendering (TextUI) MUCH faster; especially during fullscreen visualization!.
BUG FIXES
(raf) TextUI: When switching skins all the text will disappear. Corrected.
(raf) Choosing exit from option menu is much faster, and less prone to crashing.
KNOWN BUGS
(raf) Core: Static IP connections don't work correctly. Seems the gateway is not used as it should.  (Also, make sure CPU speed is 222 when establishing a WiFi connection).
(raf) Core: Module unloading doesn't free up all memory correctly. Even though plugins can now be loaded/unloaded, the PSP can eventually crash as it runs out of memory (after loading/unloading enough times; even though I switched back and forth between the text and 3d UIs over 20 times, and everything worked fine).

1.17.1349 (2007-03-20)
NEW FEATURES
(raf) Plugins: Added some VERY SIMPLE visualization plugins. This only works under TextUI at the moment. (Look under the Options-Plugins menu)
(raf) Plugins: PSPRadio saves current selected plugin in config file section PLUGINS:DEFAULT_VISUALIZER